edited writeup and complete assignment

--- a/HW4/HW4.ipynb
+++ b/HW4/HW4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 163,
    "metadata": {
     "collapsed": true
    },
@@ -10,6 +10,7 @@
    "source": [
     "import random\n",
     "import json\n",
+    "import math\n",
     "\n",
     "with open(\"training.json\", encoding='utf-8') as ins:\n",
     "    array = []\n",
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 164,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,28 +50,34 @@
     "    cuis_preds = []\n",
     "\n",
     "    for c in cuisine_probs:\n",
-    "        p_cuisine = cuisine_probs[c] #init probability that these ingredients = our cuisine of interest\n",
+    "        p_cuisine = math.log(cuisine_probs[c]) #init probability that these ingredients = our cuisine of interest\n",
+    "        #p_cuisine = cuisine_probs[c] #init probability that these ingredients = our cuisine of interest\n",
     "        #print(\"cuisine is {}\".format(c))\n",
     "        for ing in ingredients:\n",
     "            #print(\"ingredients is {}\".format(ingredients))\n",
     "            if ingredient_given_cuisine.get((c,ing)) is None:\n",
     "                ##PERHAPS DO LAPLACE SMOOTHING HERE INSTEAD\n",
     "                #https://stats.stackexchange.com/questions/108797/in-naive-bayes-why-bother-with-laplacian-smoothing-when-we-have-unknown-words-i\n",
-    "                p_cuisine *= 0.00000000001 #a hacky way to do laplace smoothing\n",
+    "                p_cuisine += math.log(0.00000000000000000001) #a hacky way to do laplace smoothing\n",
+    "                #p_cuisine *= 0.00000000000000000000001 #a hacky way to do laplace smoothing\n",
     "                #print(\"{} given {} not there\".format(c, ing))\n",
     "            else:\n",
     "                #print(\"{} given {} there\".format(c, ing))\n",
-    "                p_cuisine *= math.log(ingredient_given_cuisine.get((c,ing))) #use log numbers don't get too small\n",
-    "        heapq.heappush(cuis_preds, (p_cuisine*-100000, c))\n",
+    "                p_cuisine += math.log(ingredient_given_cuisine.get((c,ing))) #use log numbers don't get too small\n",
+    "                #p_cuisine *= ingredient_given_cuisine.get((c,ing)) #use log numbers don't get too small\n",
+    "                #log(Prob(Ci)) + log(Prob(T1|Ci)) + log(Prob(T2|Ci)) + ... + log(Prob(Tm|Ci))\n",
+    "        heapq.heappush(cuis_preds, (p_cuisine*-1, c))\n",
     "    #print(\"\\n\")\n",
     "    #print(cuis_preds)\n",
-    "    return cuis_preds[0][1]\n"
+    "    return cuis_preds[0][1], cuis_preds\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
-   "metadata": {},
+   "execution_count": 166,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_accuracy(validation):\n",
@@ -80,23 +87,28 @@
     "    correct = 0\n",
     "    for item in validation:\n",
     "        current = json.loads(item)\n",
-    "        prediction = predict_cuisine(current['ingredients'])\n",
+    "        prediction, cuisine_preds = predict_cuisine(current['ingredients'])\n",
     "        if prediction != current['cuisine']:\n",
     "            incorrect += 1\n",
-    "            #print(current['ingredients'])\n",
+    "            #print(cuisine_preds)\n",
     "            #print(\"prediction: {}\".format(prediction))\n",
     "            #print(\"actual: {}\\n\".format(current['cuisine']))\n",
+    "            #print(current['ingredients'])\n",
+    "\n",
     "        else:\n",
     "            correct += 1\n",
     "\n",
-    "    accuracy = incorrect*100/total\n",
-    "    print(\"accuracy = {}\".format(incorrect*100/total))\n",
+    "    accuracy = correct*100/total\n",
+    "    print(\"correct: {}\".format(correct))\n",
+    "    print(\"incorrect: {}\".format(incorrect))\n",
+    "    print(\"accuracy = {}\".format(accuracy))\n",
+    "    print(\"error: {}\".format(100-accuracy))\n",
     "    return accuracy\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -104,18 +116,36 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "accuracy = 74.91638795986623\n",
+      "correct: 171\n",
+      "incorrect: 128\n",
+      "accuracy = 57.19063545150502\n",
+      "error: 42.80936454849498\n",
       "1\n",
-      "accuracy = 73.24414715719064\n",
+      "correct: 150\n",
+      "incorrect: 149\n",
+      "accuracy = 50.16722408026756\n",
+      "error: 49.83277591973244\n",
       "2\n",
-      "accuracy = 73.24414715719064\n",
+      "correct: 165\n",
+      "incorrect: 134\n",
+      "accuracy = 55.18394648829432\n",
+      "error: 44.81605351170568\n",
       "3\n",
-      "accuracy = 72.90969899665552\n",
+      "correct: 166\n",
+      "incorrect: 133\n",
+      "accuracy = 55.51839464882943\n",
+      "error: 44.48160535117057\n",
       "4\n",
-      "accuracy = 68.22742474916387\n",
+      "correct: 160\n",
+      "incorrect: 139\n",
+      "accuracy = 53.51170568561873\n",
+      "error: 46.48829431438127\n",
       "5\n",
-      "accuracy = 73.91304347826087\n",
-      "72.74247491638796\n"
+      "correct: 173\n",
+      "incorrect: 126\n",
+      "accuracy = 57.85953177257525\n",
+      "error: 42.14046822742475\n",
+      "54.90523968784839\n"
      ]
     }
    ],
@@ -176,6 +206,8 @@
     "        \n",
     "    #model complete! time to validate\n",
     "    print(iteration)\n",
+    "    count = 0\n",
+    "    \n",
     "    accuracies.append(get_accuracy(validation))\n",
     "\n",
     "    #print(\"ingredient given cuisine (curry, indian): {}\".format(ingredient_given_cuisine[('indian', 'curry leaves')]))\n",
@@ -185,6 +217,15 @@
     "average_accuracy = sum(accuracies)/len(accuracies)\n",
     "print(average_accuracy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
