edited error calculation in ipynb and converted to .py

--- a/HW4/HW4.ipynb
+++ b/HW4/HW4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -39,8 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def predict_cuisine(ingredients): \n",
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -116,36 +118,36 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "correct: 171\n",
-      "incorrect: 128\n",
-      "accuracy = 57.19063545150502\n",
-      "error: 42.80936454849498\n",
+      "correct: 157\n",
+      "incorrect: 142\n",
+      "accuracy = 52.508361204013376\n",
+      "error: 47.491638795986624\n",
       "1\n",
-      "correct: 150\n",
-      "incorrect: 149\n",
-      "accuracy = 50.16722408026756\n",
-      "error: 49.83277591973244\n",
+      "correct: 170\n",
+      "incorrect: 129\n",
+      "accuracy = 56.8561872909699\n",
+      "error: 43.1438127090301\n",
       "2\n",
+      "correct: 159\n",
+      "incorrect: 140\n",
+      "accuracy = 53.17725752508361\n",
+      "error: 46.82274247491639\n",
+      "3\n",
+      "correct: 158\n",
+      "incorrect: 141\n",
+      "accuracy = 52.84280936454849\n",
+      "error: 47.15719063545151\n",
+      "4\n",
       "correct: 165\n",
       "incorrect: 134\n",
       "accuracy = 55.18394648829432\n",
       "error: 44.81605351170568\n",
-      "3\n",
-      "correct: 166\n",
-      "incorrect: 133\n",
-      "accuracy = 55.51839464882943\n",
-      "error: 44.48160535117057\n",
-      "4\n",
-      "correct: 160\n",
-      "incorrect: 139\n",
-      "accuracy = 53.51170568561873\n",
-      "error: 46.48829431438127\n",
       "5\n",
-      "correct: 173\n",
-      "incorrect: 126\n",
-      "accuracy = 57.85953177257525\n",
-      "error: 42.14046822742475\n",
-      "54.90523968784839\n"
+      "correct: 163\n",
+      "incorrect: 136\n",
+      "accuracy = 54.51505016722408\n",
+      "error: 45.48494983277592\n",
+      "45.81939799331104\n"
      ]
     }
    ],
@@ -214,9 +216,54 @@
     "    #print(\"ingredient prob curry leaves: {} \".format(ingredient_probs['curry leaves']))\n",
     "    #print(\"cuisine prob indian: {}\".format(cuisine_probs['indian']))\n",
     "\n",
-    "average_accuracy = sum(accuracies)/len(accuracies)\n",
-    "print(average_accuracy)"
+    "average_error = sum([(100-i) for i in accuracies])/len(accuracies)\n",
+    "print(average_error)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
